Bug 910329 - Don't use the channel status as a proxy for load group membership.  r=mayhemer, a=lizzard